--- a/web/sites/mobile-casino/config/sync/core.extension.yml
+++ b/web/sites/mobile-casino/config/sync/core.extension.yml
@@ -89,6 +89,7 @@ module:
   webcomposer_language_access: 0
   webcomposer_language_hierarchy: 0
   webcomposer_marketing_script: 0
+  webcomposer_optimized_rest: 0
   webcomposer_promotions: 0
   webcomposer_registration_landing_page: 0
   webcomposer_replicate_utility: 0
