DFMVRT-9 changed option to select box

--- a/web/sites/mobile-virtuals/config/sync/core.entity_form_display.node.games.default.yml
+++ b/web/sites/mobile-virtuals/config/sync/core.entity_form_display.node.games.default.yml
@@ -214,7 +214,7 @@ content:
     weight: 16
     settings: {  }
     third_party_settings: {  }
-    type: options_buttons
+    type: options_select
     region: content
   field_target:
     weight: 16
