[NBMLD-10] modifying NB Mobile Live dealer config files

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
@@ -26,6 +26,9 @@ settings:
     -
       value: asia_gaming
       label: 'Asia Gaming'
+    -
+      value: sa_gaming
+      label: 'SA Gaming'
   allowed_values_function: ''
 module: options
 locked: false
