--- a/web/sites/mobile-nextbet/config/sync/field.field.node.games_live_dealer.field_game_code_live_dealer.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.field.node.games_live_dealer.field_game_code_live_dealer.yml
@@ -10,7 +10,7 @@ field_name: field_game_code_live_dealer
 entity_type: node
 bundle: games_live_dealer
 label: 'Game Code / Game Category'
-description: "<p>iCore game detail to use per provider:</p>\r\n<ul>\r\n<li><strong>Skywind:</strong> <i>N/A</i></li>\r\n<li><strong>Voidbridge:</strong> ExternalGameId|ProviderProduct <small>(nextbet-live-dealer)</small></li>\r\n<li><strong>Playtech:</strong> GameId</li>\r\n<li><strong>Asia Gaming:</strong> <i>N/A</i></li>\r\n<li><strong>Evolution Gaming:</strong> <i>N/A</i></li>\r\n</ul>"
+description: "<p>iCore game detail to use per provider:</p>\r\n<ul>\r\n<li><strong>Skywind:</strong> <i>N/A</i></li>\r\n<li><strong>Voidbridge:</strong> ExternalGameId|ProviderProduct <small>(nextbet-live-dealer)</small></li>\r\n<li><strong>Playtech:</strong> GameId</li>\r\n<li><strong>Asia Gaming:</strong> <i>N/A</i></li>\r\n<li><strong>Evolution Gaming:</strong> <i>N/A</i></li>\r\n<li><strong>SA Gaming:</strong> <i>N/A</i></li>\r\n</ul>"
 required: false
 translatable: false
 default_value: {  }
