--- a/web/sites/zipang-casino/modules/custom/zipang_all_games_config/zipang_all_games_config.info.yml
+++ b/web/sites/zipang-casino/modules/custom/zipang_all_games_config/zipang_all_games_config.info.yml
@@ -1,4 +1,4 @@
-name: All Games Configurations
+name: All Games Configurations Test
 type: module
 description: All Games Page Configurations
 core: 8.x
