[DFGMS-87] Bug Fix BN and PK game-launch 404 error.

--- a/web/sites/games/config/sync/user.role.anonymous.yml
+++ b/web/sites/games/config/sync/user.role.anonymous.yml
@@ -29,6 +29,8 @@ permissions:
   - 'access language th'
   - 'access language vi'
   - 'access language zh-hans'
+  - 'access language bn'
+  - 'access language pk'
   - 'access site-wide contact form'
   - 'administer rest resources'
   - 'restful get affiliate_rest_resource'
