--- a/web/sites/mobile-soda-casino/config/sync/language.entity.in.yml
+++ b/web/sites/mobile-soda-casino/config/sync/language.entity.in.yml
@@ -1,5 +1,5 @@
-uuid: 1fb6c16b-2f4e-43e8-9897-4c61d5e06175
-langcode: hi
+uuid: c49c1cb8-5e04-46ad-a6c6-5daad7acd876
+langcode: in
 status: true
 dependencies:
   module:
@@ -7,9 +7,9 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: हिन्दी
-id: hi
-label: 'Hindi (India)'
+    webcomposer_language_hidden: 0
+id: in
+label: 'English (India)'
 direction: ltr
-weight: -5
+weight: -4
 locked: false
