--- a/web/sites/mobile-soda-casino/config/sync/language.entity.ko.yml
+++ b/web/sites/mobile-soda-casino/config/sync/language.entity.ko.yml
@@ -7,9 +7,9 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: 한국어
+    webcomposer_language_custom_label: 'Korean'
 id: ko
 label: Korean
 direction: ltr
-weight: -6
+weight: -7
 locked: false
