--- a/web/sites/mobile-soda-casino/config/sync/language.entity.vi.yml
+++ b/web/sites/mobile-soda-casino/config/sync/language.entity.vi.yml
@@ -7,9 +7,9 @@ dependencies:
 third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
-    webcomposer_language_custom_label: 'Tiếng Việt'
+    webcomposer_language_custom_label: 'Vietnamese'
 id: vi
 label: Vietnamese
 direction: ltr
-weight: -4
+weight: -6
 locked: false
