--- a/web/sites/mobile-soda-casino/config/sync/field.field.node.games.field_game_code.yml
+++ b/web/sites/mobile-soda-casino/config/sync/field.field.node.games.field_game_code.yml
@@ -10,7 +10,7 @@ field_name: field_game_code
 entity_type: node
 bundle: games
 label: 'Game Code'
-description: "<b>iCore game detail to use per provider:</b>\r\n<ul>\r\n <li><b>PAS:</b> GameId</li>\r\n <li><b>GPAS:</b> GPAS_GameId_POP</li>\r\n</ul>"
+description: "<b>iCore Playtech details:</b>\r\n<ul>\r\n  <li>\r\n    <b>PTPlus:</b> GameCode|Type<br>\r\n           <code>Type:</code>\r\n            <ul>\r\n                <li>Slot</li>\r\n                <li>Live</li>\r\n            </ul>\r\n  </li>\r\n</ul>"
 required: true
 translatable: false
 default_value: {  }
