--- a/web/sites/mobile-soda-casino/config/sync/field.field.node.games.field_game_platform.yml
+++ b/web/sites/mobile-soda-casino/config/sync/field.field.node.games.field_game_platform.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: games
 label: 'Game Platform'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
