--- a/web/sites/zipang-casino/config/sync/views.view.game_list_desktop_v2.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_desktop_v2.yml
@@ -3,6 +3,7 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.storage.zipang_desktop_games_entity.field_all_games_category
     - field.storage.zipang_desktop_games_entity.field_arcade_game_category
     - field.storage.zipang_desktop_games_entity.field_arcade_game_filter
     - field.storage.zipang_desktop_games_entity.field_client_type
@@ -1393,6 +1394,9 @@ display:
             field_game_icon_label_export:
               alias: game_icon_label
               raw_output: false
+            field_all_games_category_export:
+              alias: all_games_categories
+              raw_output: false
       fields:
         id:
           id: id
@@ -2642,6 +2646,66 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_all_games_category_export:
+          id: field_all_games_category_export
+          table: zipang_desktop_games_entity__field_all_games_category
+          field: field_all_games_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
       pager:
         type: full
         options:
@@ -2772,6 +2836,7 @@ display:
         - request_format
         - url.query_args
       tags:
+        - 'config:field.storage.zipang_desktop_games_entity.field_all_games_category'
         - 'config:field.storage.zipang_desktop_games_entity.field_arcade_game_category'
         - 'config:field.storage.zipang_desktop_games_entity.field_arcade_game_filter'
         - 'config:field.storage.zipang_desktop_games_entity.field_client_type'
