--- a/web/sites/entrypage/config/sync/core.extension.yml
+++ b/web/sites/entrypage/config/sync/core.extension.yml
@@ -52,6 +52,7 @@ module:
   metatag: 0
   metatag_open_graph: 0
   node: 0
+  node_revisions_autoclean: 0
   options: 0
   paragraphs: 0
   paragraphs_type_permissions: 0
