--- a/web/sites/mobile-nextbet/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/mobile-nextbet/config/sync/webcomposer_config.icore_games_integration.yml
@@ -1,4 +1,4 @@
-icore_games_integration_form__active_tab: edit-voidbridge
+icore_games_integration_form__active_tab: edit-micro-gaming
 asia_gaming_currency: "RMB\r\nUSD\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR\r\nEUR"
 asia_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nko|ko-KR\r\nvn|vn\r\nid|id\r\nin|hi"
 asia_gaming_country: ''
@@ -68,8 +68,8 @@ betconstruct_container_id: ''
 fun_gaming_currency: ''
 fun_gaming_language_mapping: ''
 fun_gaming_country: ''
-micro_gaming_currency: ''
-micro_gaming_language_mapping: ''
+micro_gaming_currency: "RMB\r\nTHB\r\nMYR\r\nVND\r\nKRW\r\nIDR"
+micro_gaming_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nkr|ko\r\nvn|vi\r\nid|id"
 micro_gaming_country: ''
 flow_gaming_currency: ''
 flow_gaming_language_mapping: ''
