NBMLD-16-NBMARC-11-NBMCCL-16 additional files

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
@@ -20,6 +20,9 @@ settings:
     -
       value: cq9
       label: CQ9
+    -
+      value: micro_gaming
+      label: Microgaming
   allowed_values_function: ''
 module: options
 locked: false
