--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
@@ -29,6 +29,9 @@ settings:
     -
       value: sa_gaming
       label: 'SA Gaming'
+    -
+      value: micro_gaming
+      label: Microgaming
   allowed_values_function: ''
 module: options
 locked: false
