--- a/web/sites/zipang-casino/config/sync/views.view.all_games_page.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.all_games_page.yml
@@ -1,4 +1,4 @@
-uuid: a09909c6-15e6-43fb-9cc2-02ab2b617e37
+uuid: 7fe2a34d-5cfe-4bb0-9a54-86e924695ea6
 langcode: ja
 status: true
 dependencies:
@@ -7,7 +7,6 @@ dependencies:
     - field.storage.zipang_all_games_entity.field_games
   module:
     - rest
-    - rest_views
     - serialization
     - webcomposer_rest_extra
     - zipang_all_games_config
@@ -51,25 +50,41 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: none
         options:
-          items_per_page: 10
+          items_per_page: 0
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: table
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          override: true
+          sticky: false
+          caption: ''
+          summary: ''
+          description: ''
+          columns:
+            name: name
+            field_all_games_category: field_all_games_category
+          info:
+            name:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_all_games_category:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: '-1'
+          empty_table: false
       row:
         type: fields
       fields:
@@ -137,10 +152,10 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        field_all_games_category_export:
-          id: field_all_games_category_export
+        field_all_games_category:
+          id: field_all_games_category
           table: zipang_all_games_entity__field_all_games_category
-          field: field_all_games_category_export
+          field: field_all_games_category
           relationship: none
           group_type: group
           admin_label: ''
@@ -188,7 +203,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_label
           settings:
-            link: 0
+            link: false
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -196,8 +211,10 @@ display:
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
-          field_api_classes: 0
-          plugin_id: field_export
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters:
         langcode:
           id: langcode
@@ -252,7 +269,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
       tags:
         - 'config:field.storage.zipang_all_games_entity.field_all_games_category'
   page_1:
@@ -268,7 +284,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
       tags:
         - 'config:field.storage.zipang_all_games_entity.field_all_games_category'
   rest_export_1:
@@ -280,9 +295,8 @@ display:
       display_extenders: {  }
       path: api/all_games_entities
       style:
-        type: node_list_serializer
+        type: node_field_serializer
         options:
-          uses_fields: true
           formats:
             json: json
       defaults:
@@ -296,15 +310,24 @@ display:
             name:
               alias: ''
               raw_output: false
+            field_all_games_category:
+              alias: category
+              raw_output: false
+            field_games:
+              alias: games
+              raw_output: false
       pager:
         type: none
         options:
           offset: 0
       fields:
         name:
-          id: name
           table: zipang_all_games_entity_field_data
           field: name
+          id: name
+          entity_type: null
+          entity_field: name
+          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
@@ -351,8 +374,7 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: string
-          settings:
-            link_to_entity: false
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -363,9 +385,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: null
-          entity_field: name
-          plugin_id: field
         field_all_games_category:
           id: field_all_games_category
           table: zipang_all_games_entity__field_all_games_category
@@ -417,7 +436,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_label
           settings:
-            link: true
+            link: false
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -483,7 +502,7 @@ display:
           group_column: target_id
           group_columns: {  }
           group_rows: true
-          delta_limit: 8
+          delta_limit: 0
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
