DFMPTPLUS-3 ptplus-mobile-footer-language

--- a/web/sites/ptplus/config/sync/user.role.anonymous.yml
+++ b/web/sites/ptplus/config/sync/user.role.anonymous.yml
@@ -11,6 +11,20 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bu'
+  - 'access language en'
+  - 'access language es'
+  - 'access language hi'
+  - 'access language id'
+  - 'access language ja'
+  - 'access language km'
+  - 'access language ko'
+  - 'access language lo'
+  - 'access language pt-br'
+  - 'access language th'
+  - 'access language vi'
+  - 'access language zh-hans'
+  - 'access language zh-hant'
   - 'access site-wide contact form'
   - 'administer rest resources'
   - 'restful get casino_config_rest_resource'
